fix rename on IE - Refs #465 #429

--- a/ui/static/ie.css
+++ b/ui/static/ie.css
@@ -66,3 +66,6 @@ div.single-actions {
     height: 80px;
 }
 
+.editbuttons .cancel, .editbuttons .save {
+    margin-top: -30px;
+}
